--- a/web/themes/custom/s3waas/css/base/elements.css
+++ b/web/themes/custom/s3waas/css/base/elements.css
@@ -494,8 +494,8 @@ ul#photos-sortable>li.photos-sort-grid>img.image-style-thumbnail {
 }
 
 article.contextual-region.node.node--type-photos.node--view-mode-full {
-  background: red;
-  width: 1%;
+  /* background: red;
+  width: 100%; */
 }
 
 form.photos-image-edit>div.item-list>ul {
